--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,4 +1,7 @@
 conda_build_tool: rattler-build
+build_platform:
+  linux_aarch64: linux_64
+  osx_arm64: osx_64
 github:
   branch_name: main
   tooling_branch_name: main
