--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -18,6 +18,8 @@ requirements:
     - ${{ stdlib("c") }}
     - ${{ compiler('rust') }}
     - cargo-bundle-licenses
+    - if: build_platform != target_platform
+      then: cross-python_${{ target_platform }}
     - maturin >=1.0,<2.0
     - pip
     - python
